# libkrucible

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md
examples/: chroot_vm.c
include/: libkrun.h
init/: Cargo.toml
src/arch/: Cargo.toml
src/arch/src/aarch64/linux/: regs.rs
src/arch_gen/: Cargo.toml
src/aws_nitro/: Cargo.toml
src/cpuid/: Cargo.toml
src/devices/: Cargo.toml
src/devices/src/legacy/: gic.rs  irqchip.rs  kvmgicv2.rs  vcpu.rs
src/devices/src/virtio/: device.rs  linux_errno.rs  mmio.rs  mod.rs  persist.rs  queue.rs
src/devices/src/virtio/block/: device.rs  mod.rs  worker.rs
src/devices/src/virtio/console/: device.rs  mod.rs  process_tx.rs
src/devices/src/virtio/fs/: augment_fs.rs  device.rs  filesystem.rs  fuse.rs  mod.rs  null_fs.rs  read_only.rs  server.rs  worker.rs
src/devices/src/virtio/fs/linux/: passthrough.rs
src/devices/src/virtio/rng/: device.rs  mod.rs
src/devices/src/virtio/vsock/: device.rs  mod.rs
src/hvf/: Cargo.toml
src/hvf/src/: lib.rs
src/init_blob/: Cargo.toml  build.rs
src/kernel/: Cargo.toml
src/libkrun/: Cargo.toml  build.rs
src/libkrun/src/: lib.rs
src/polly/: Cargo.toml
src/rutabaga_gfx/: Cargo.toml
src/rutabaga_gfx/ffi/: Cargo.toml
src/smbios/: Cargo.toml
src/utils/: Cargo.toml
src/vmm/: Cargo.toml  build.rs
src/vmm/src/: builder.rs  lib.rs  resources.rs  snapshot.rs
src/vmm/src/device_manager/hvf/: mmio.rs
src/vmm/src/device_manager/kvm/: mmio.rs
src/vmm/src/linux/: vstate.rs
src/vmm/src/macos/: vstate.rs
src/whp/: Cargo.toml
(+3 files in other folders)
