[package]
name = "krun-init-blob"
version = "0.1.0-2.0.0-dev"
edition = "2024"
description = "Default init binary blob for libkrun guests"
license = "Apache-2.0"
repository = "https://github.com/containers/libkrun"
build = "build.rs"

[features]
amd-sev = []
tdx = []
timesync = []

[lib]
path = "src/lib.rs"
